# pag

./: .env.example  .gitignore  DEVPLAN.md  README.md  install.sh  pyproject.toml
src/pag/: __init__.py  __main__.py  cli.py  client.py  config.py  models.py  output.py  spinner.py  styles.py
tests/live/: conftest.py  test_animate.py  test_cost_check.py  test_generate.py  test_styles_api.py
tests/unit/: test_cli.py  test_client.py  test_config.py  test_models.py  test_output.py  test_scaffolding.py  test_spinner.py  test_styles.py
