[project]
name = "pag"
version = "0.1.0"
description = "Pixel Art Generator — CLI tool for generating pixel art via the Retro Diffusion API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
pag = "pag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that call the real Retro Diffusion API (require RETRODIFFUSION_API_KEY)",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "respx>=0.22",
]
